--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,13 @@
-<html>
-  <head>
-    <title>CP Blog</title>
-  </head>
-  <body>
-    {% for post in posts %}
-      <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+{% extends 'blog/base.html' %}
+ 
+{% block content %}
+  {% for post in posts %}
+    <div class="post">
+      <div class="date">
+        {{ post.published_date }}
       </div>
-    {% endfor %}
-  </body>
-</html>
+      <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+  {% endfor %}
+{% endblock %}
